--- a/tensquare_parent52/tensquare_rabbitmq/src/main/resources/application.properties
+++ b/tensquare_parent52/tensquare_rabbitmq/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.rabbitmq.host=47.101.11.232
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=virtuousone
-#°¢ÀïÔÆ accessKeyId£¨°²È«ĞÅÏ¢¹ÜÀíÏÂÃæ£©
-aliyun.sms.accessKeyId=LTAItQtDnYvnbHZd
-#°¢ÀïÔÆ accessKeySecret£¨°²È«ĞÅÏ¢¹ÜÀíÏÂÃæ£©
-aliyun.sms.accessKeySecret=wlNB7crmAk9Aas7jG2Gxa5z1aZNHPj
-#Ä£°åÃû³Æ
+#é˜¿é‡Œäº‘ accessKeyIdï¼ˆå®‰å…¨ä¿¡æ¯ç®¡ç†ä¸‹é¢ï¼‰
+aliyun.sms.accessKeyId=
+#é˜¿é‡Œäº‘ accessKeySecretï¼ˆå®‰å…¨ä¿¡æ¯ç®¡ç†ä¸‹é¢ï¼‰
+aliyun.sms.accessKeySecret=
+#æ¨¡æ¿åç§°
 aliyun.sms.template_code=SMS_172597846
-#Ç©ÃûÃû³Æ
+#ç­¾ååç§°
 aliyun.sms.sign_name=virtuousone
